--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -97,4 +97,6 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/Lobby")
 +MapsToCook=(FilePath="/Game/Maps/GameStartupMap")
 +MapsToCook=(FilePath="/Game/Maps/BlasterMap")
++MapsToCook=(FilePath="/Game/Maps/Teams")
++MapsToCook=(FilePath="/Game/Maps/CTF")
 
